--- a/Pipfile
+++ b/Pipfile
@@ -4,13 +4,24 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-flask = "*"
-pymysql = "*"
-flask-assets = "*"
-libsass = "*"
-python-dotenv = "*"
-flask-bcrypt = "*"
-flask-cors = "*"
+libsass = "==0.21.0"
+python-dotenv = "==0.19.2"
+bcrypt = "==3.2.0"
+cffi = "==1.15.0"
+click = "==8.0.3"
+colorama = "==0.4.4"
+itsdangerous = "==2.0.1"
+pycparser = "==2.21"
+six = "==1.16.0"
+webassets = "==2.0"
+Flask = "==2.0.2"
+PyMySQL = "==1.0.2"
+Flask-Assets = "==2.0"
+Flask-Bcrypt = "==0.7.1"
+Flask-Cors = "==3.0.10"
+Jinja2 = "==3.0.3"
+MarkupSafe = "==2.0.1"
+Werkzeug = "==2.0.2"
 
 [dev-packages]
 
