--- a/requirements.txt
+++ b/requirements.txt
@@ -50,3 +50,9 @@ webassets==2.0
 
 werkzeug==2.0.2; python_version >= '3.6'
 
+PySocks==1.7.1
+pycryptodomex==3.12.0
+typing-extensions==4.0.1
+pydantic==1.9.0
+Pillow==9.0.1
+instagrapi==1.16.14
