--- a/requirements.txt
+++ b/requirements.txt
@@ -14,13 +14,23 @@
 
 -i https://pypi.org/simple
 
-bcrypt==3.2.0; python_version >= '3.6'
+bcrypt==3.2.0
+
+boto3==1.20.49
+
+botocore==1.23.49; python_version >= '3.6'
+
+certifi==2021.10.8
 
 cffi==1.15.0
 
-click==8.0.3; python_version >= '3.6'
+charset-normalizer==2.0.11; python_version >= '3'
 
-colorama==0.4.4; platform_system == 'Windows'
+click==8.0.3
+
+colorama==0.4.4
+
+deprecated==1.2.13; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 
 flask-assets==2.0
 
@@ -30,29 +40,57 @@ flask-cors==3.0.10
 
 flask==2.0.2
 
-itsdangerous==2.0.1; python_version >= '3.6'
+Flask-Mail==0.9.1
 
-jinja2==3.0.3; python_version >= '3.6'
+idna==3.3; python_version >= '3'
+
+instagrapi==1.16.14
+
+itsdangerous==2.0.1
+
+jinja2==3.0.3
+
+jmespath==0.10.0; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
 
 libsass==0.21.0
 
-markupsafe==2.0.1; python_version >= '3.6'
+markupsafe==2.0.1
+
+packaging==21.3; python_version >= '3.6'
+
+pillow==9.0.1
 
 pycparser==2.21
 
+pycryptodomex==3.12.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
+
+pydantic==1.9.0; python_full_version >= '3.6.1'
+
 pymysql==1.0.2
+
+pyparsing==3.0.7; python_version >= '3.6'
+
+pysocks==1.7.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+
+python-dateutil==2.8.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 
 python-dotenv==0.19.2
 
-six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+redis==4.1.2
+
+requests==2.27.1
+
+s3transfer==0.5.1; python_version >= '3.6'
+
+six==1.16.0
+
+typing-extensions==4.0.1; python_version >= '3.6'
+
+urllib3==1.26.8; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4'
 
 webassets==2.0
 
-werkzeug==2.0.2; python_version >= '3.6'
+werkzeug==2.0.2
 
-PySocks==1.7.1
-pycryptodomex==3.12.0
-typing-extensions==4.0.1
-pydantic==1.9.0
-Pillow==9.0.1
-instagrapi==1.16.14
+wrapt==1.13.3; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
+
